# RCOM

Project_1/: CMakeLists.txt
Project_1/include/: E_Application_layer.h  E_link_layer.h  R_Application_layer.h  R_link_layer.h
Project_1/src/: E_Application_layer.c  E_link_layer.c  E_main.c  Emissor  R_Application_layer.c  R_link_layer.c  R_main.c  porta  recetor
Project_2/: download.c
Project_2/wiresharks/: exp2.pcapng  exp22.pcapng  exp22step10.pcapng  exp23.pcapng  exp23step10.pcapng  exp24.pcapng  exp24step10.pcapng  exp4tux2.pcapng  exp4tux2step4.pcapng  exp4tux3.pcapng  exp4tux4.pcapng  exp5tux4.pcapng
